--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,8 @@
 {% set version = "1.3.1" %}
+{% if build_platform is undefined %}
+{% set build_platform = "linux-64" %}
+{% endif %}
+{% set posix = "m2-" if build_platform.startswith("win-") else '' %}
 
 package:
   name: mpc
@@ -16,25 +20,25 @@ build:
 
 requirements:
   build:
-    - gnuconfig              # [unix]
-    - {{ compiler('c') }}
-    - autotools_clang_conda  # [win]
-    - make            # [unix]
-    - {{ compiler('c') }}
+    - libtool         # [unix]
+    - m4              # [unix]
+    - gnuconfig
+    - {{ posix }}make
+    - {{ posix }}base             # [build_platform.startswith("win-")]
+    - {{ posix }}diffutils        # [build_platform.startswith("win-")]
+    - {{ compiler('c') }}         # [unix]
+    - {{ stdlib('c') }}           # [unix]
+    - {{ compiler('m2w64_c') }}   # [win]
+    - {{ stdlib('m2w64_c') }}     # [win]
   host:
-    - gmp             # [unix]
-    - mpir            # [win]
-    - mpfr
-  run:
-    - gmp             # [unix]
-    - mpir            # [win]
+    - gmp
     - mpfr
 
 test:
   commands:
     - if not exist %LIBRARY_INC%\\mpc.h exit 1                  # [win]
     - if not exist %LIBRARY_LIB%\\mpc.lib exit 1                # [win]
-    - if not exist %LIBRARY_BIN%\\mpc.dll exit 1                # [win]
+    - if not exist %LIBRARY_BIN%\\libmpc-3.dll exit 1           # [win]
     - test -f ${PREFIX}/include/mpc.h                           # [unix]
     - test -f ${PREFIX}/lib/libmpc.dylib                        # [osx]
     - test -f ${PREFIX}/lib/libmpc.so                           # [linux]
